--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.9.1"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
